--- a/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
+++ b/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
@@ -35,6 +35,7 @@
 
 .profile-des .main-profile img {
   max-width: 160px;
+  max-height: 130px;
   width: 100%;
   margin: 0 auto;
   -webkit-transform: translate3d(0, -50%, 0);
@@ -63,6 +64,8 @@
 
 .profile-des .main-profile .profile .name p {
   color: #d3a65a;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .profile-des .main-profile .profile .name .title {
@@ -73,8 +76,30 @@
 }
 
 .profile-des .main-profile .profile .upload {
-  display: flex;
+  display: grid;
+  grid-row: 9px;
+  justify-content: center;
   padding: 0 5% 5% 5%;
+}
+
+.profile-des .main-profile .profile .upload .two-div{
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.upload-btn{
+  justify-self: center;
+  padding: 5px 10px;
+  width: 100px;
+  background: #9b1010ed;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+}
+
+.profile-des .main-profile .profile .upload .j-self{
+  justify-self: center;
+
 }
 
 .profile-des .main-profile .card-block {
@@ -150,3 +175,14 @@ justify-content: center;
   font-size: 18px;
 } 
 
+/* upload  */
+
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  padding: 5px 8px;
+  color: #9b1010ed;
+  border: none;
+  border-radius: 10px;
+}
