--- a/Travel-Guide/src/main/frontend/src/components/Seacrch/Search.css
+++ b/Travel-Guide/src/main/frontend/src/components/Seacrch/Search.css
@@ -134,3 +134,10 @@
   justify-content: space-between;
 }
 
+.des-over{
+  overflow: hidden;
+  /* width:670px; */
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
