--- a/Travel-Guide/src/main/frontend/src/components/Footer/Footer.css
+++ b/Travel-Guide/src/main/frontend/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer-basic {
-    padding:40px 0;
-    background-color:#2D2422;
-    color:#ccc;
+    padding:10px 0;
+    color:#2D2422;
+    background: linear-gradient(#e1e1e196 99%, #00000042 10% );
   }
   
   .footer-basic ul {
@@ -18,7 +18,6 @@
   }
   
   .footer-basic ul a {
-    color:inherit;
     text-decoration:none;
     opacity:0.8;
   }
@@ -29,7 +28,6 @@
   
   .footer-basic .social {
     text-align:center;
-    padding-bottom:25px;
   }
   
   .footer-basic .social > a {
@@ -40,21 +38,20 @@
     display:inline-block;
     text-align:center;
     border-radius:50%;
-    border:1px solid rgb(212, 212, 212);
+    border:1px solid #E1E1E1;
     margin:0 8px;
     color:inherit;
-    opacity:0.75;
   }
   
   .footer-basic .social > a:hover {
     color: #D3A65A;
-    border:1px solid #D3A65A;
   }
   
   .footer-basic .copyright {
     margin-top:15px;
     text-align:center;
     font-size:13px;
+    font-weight: bolder;
     color:#D3A65A;
     margin-bottom:0;
   }
