--- a/Travel-Guide/src/main/frontend/src/components/Landing/Landing.css
+++ b/Travel-Guide/src/main/frontend/src/components/Landing/Landing.css
@@ -43,12 +43,14 @@
     font-size: 14px;
   }
   
-  .Landing .cties-group .titles .btn{
-      border-radius: 9999px;
-      border: #2d242279 solid 1px;
+  .Landing .cties-group .titles .btn{ 
       padding: .5rem 1.25rem;
       font-size: 14px;
       font-weight: 500;
+      background: #9b1010ed;
+      color: #fff;
+      border: none;
+      border-radius: 30px;
   }
   
   .Landing .countries-group,
