--- a/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
+++ b/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
@@ -19,7 +19,7 @@
 .profile-des .main-profile {
   background: #ececec;
   position: relative;
-  margin: -180px 130px 0px;
+  margin: -180px 200px 0px;
   border-radius: 6px;
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
     0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
@@ -106,13 +106,24 @@
   padding: 0% 10%;
 }
 
-.profile-des .main-profile .card-block .row{
+.profile-des .main-profile .card-block .row-grid{
   padding-left: 4%;
+  padding-top: 2%;
+  display: grid;
+  grid-template-columns: 50% auto;
+  gap: 15px;
 }
 
 
-.profile-des .main-profile h6 {
+.sup-grid{
+  display: grid;
+  grid-template-columns: 70px auto;
+}
+
+
+.profile-des .main-profile h6, .profile-des .main-profile p{
   font-size: 14px;
+  padding: 0;
 }
 
 .prof-card .card-block p {
@@ -123,24 +134,8 @@
   border-bottom: 1px solid #e0e0e0;
 }
 
-.m-b-20 {
-  margin-bottom: 20px;
-}
-
-.p-b-5 {
-  padding-bottom: 5px !important;
-}
-
-.m-b-10 {
-  margin-bottom: 10px;
-}
-
 .text-muted {
   color: #919aa3 !important;
-}
-
-.f-w-600 {
-  font-weight: 600;
 }
 
 .m-t-40 {
@@ -156,14 +151,15 @@ display: grid;
 grid-template-columns: auto auto auto;
 row-gap: 5px;
 column-gap: 15px;
-padding-bottom: 5%;
+padding: 5% 0;
 justify-content: center;
 }
 
 .profile-des .main-profile .trips-card .card-body .tp-card{
   padding: 15px;
   width: 200px;
-  background-color: #d3a75a52;
+  background-color: #9c2e2e;
+  color: #fff;
   border-radius: 20px;
   text-align: center;
   cursor: pointer;
