--- a/Travel-Guide/src/main/frontend/src/index.css
+++ b/Travel-Guide/src/main/frontend/src/index.css
@@ -31,7 +31,7 @@ body{
 
 .wallpaper{
   background-image: linear-gradient(
-    rgba(0, 0, 0, 0),
+    #63636363,
     #E1E1E1
   ),
   url(./images/papers.png);
