--- a/Travel-Guide/src/main/frontend/src/components/PlacesDetails/PlacesDetails.css
+++ b/Travel-Guide/src/main/frontend/src/components/PlacesDetails/PlacesDetails.css
@@ -159,7 +159,7 @@
     padding-bottom: 15px;
 }
 
-.comment-body .contact_text p{
+.comment-body .contact_text .comment-p{
     font-size: 14px;
 }
 
