--- a/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
+++ b/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
@@ -19,8 +19,8 @@
 .profile-des .main-profile {
   background: #ececec;
   position: relative;
-  margin: -180px 200px 0px;
-  border-radius: 6px;
+  margin: -180px 20% 0px;
+  border-radius: 25px;
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
     0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
   display: grid;
@@ -134,10 +134,6 @@
   border-bottom: 1px solid #e0e0e0;
 }
 
-.text-muted {
-  color: #919aa3 !important;
-}
-
 .m-t-40 {
   margin-top: 20px;
 }
@@ -182,3 +178,40 @@ justify-content: center;
   border: none;
   border-radius: 10px;
 }
+
+/* ticket */
+
+.ticket {
+  background: #9b1010ed;
+  height: 80px;
+  padding-top: 10px;
+  position: relative;
+  width: 200px;
+  color: #fff;
+  text-align: center;
+}
+
+.ticket:before {
+  background: #ececec;
+  border-radius: 50%;
+  box-shadow: 208px 0 0 0 #ececec, 0 85px 0 0 #ececec, 208px 85px 0 0 #ececec;
+  content: "";
+  display: block;
+  height: 45px;
+  left: -31px;
+  position: absolute;
+  top: -25px;
+  width: 51px;
+}
+
+.ticket span {
+  border-radius: 20px;
+  border: 3px solid #aaa;
+  color: #fff;
+  display: inline-block;
+  left: 50%;
+  margin-left: 40px;
+  padding: 15px;
+  
+}
+
