--- a/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
+++ b/Travel-Guide/src/main/frontend/src/components/Profile/Profile.css
@@ -82,12 +82,12 @@
   padding: 0 5% 5% 5%;
 }
 
-.profile-des .main-profile .profile .upload .two-div{
+.profile-des .main-profile .profile .upload .two-div {
   display: grid;
   grid-template-columns: auto auto auto;
 }
 
-.upload-btn{
+.upload-btn {
   justify-self: center;
   padding: 5px 10px;
   width: 100px;
@@ -97,16 +97,15 @@
   border-radius: 10px;
 }
 
-.profile-des .main-profile .profile .upload .j-self{
+.profile-des .main-profile .profile .upload .j-self {
   justify-self: center;
-
 }
 
 .profile-des .main-profile .card-block {
   padding: 0% 10%;
 }
 
-.profile-des .main-profile .card-block .row-grid{
+.profile-des .main-profile .card-block .row-grid {
   padding-left: 4%;
   padding-top: 2%;
   display: grid;
@@ -114,14 +113,13 @@
   gap: 15px;
 }
 
-
-.sup-grid{
+.sup-grid {
   display: grid;
   grid-template-columns: 70px auto;
 }
 
-
-.profile-des .main-profile h6, .profile-des .main-profile p{
+.profile-des .main-profile h6,
+.profile-des .main-profile p {
   font-size: 14px;
   padding: 0;
 }
@@ -138,20 +136,29 @@
   margin-top: 20px;
 }
 
-.profile-des .main-profile .trips-card {
+.profile-des .main-profile .trips-card,
+.profile-des .main-profile .trips-cr {
   padding: 2% 10%;
 }
 
-.profile-des .main-profile .trips-card .card-body{
-display: grid;
-grid-template-columns: auto auto auto;
-row-gap: 5px;
-column-gap: 15px;
-padding: 5% 0;
-justify-content: center;
+.profile-des .main-profile .trips-cr .card-body{
+  display: grid;
+  grid-template-columns: auto ;
+  justify-content: center;
+  padding: 10px;
+  gap: 5px;
 }
 
-.profile-des .main-profile .trips-card .card-body .tp-card{
+.profile-des .main-profile .trips-card .card-body {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  row-gap: 5px;
+  column-gap: 15px;
+  padding: 5% 0;
+  justify-content: center;
+}
+
+.profile-des .main-profile .trips-card .card-body .tp-card {
   padding: 15px;
   width: 200px;
   background-color: #9c2e2e;
@@ -161,11 +168,10 @@ justify-content: center;
   cursor: pointer;
 }
 
-.profile-des .main-profile .trips-card .card-body
-.tp-card .plaace-card{
+.profile-des .main-profile .trips-card .card-body .tp-card .plaace-card {
   text-transform: capitalize;
   font-size: 18px;
-} 
+}
 
 /* upload  */
 
@@ -184,7 +190,7 @@ justify-content: center;
 .ticket {
   background: #9b1010ed;
   height: 80px;
-  padding-top: 10px;
+  padding-top: 20px;
   position: relative;
   width: 200px;
   color: #fff;
@@ -212,6 +218,4 @@ justify-content: center;
   left: 50%;
   margin-left: 40px;
   padding: 15px;
-  
 }
-
